--- a/packages/aheuidt/package.json
+++ b/packages/aheuidt/package.json
@@ -12,7 +12,12 @@
     "preact": "^10.10.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-react-jsx-development": "^7.18.6",
     "@preact/preset-vite": "^2.3.0",
+    "babel-plugin-transform-hook-names": "^1.0.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
