--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        with:
+          cache: pnpm
 
       - name: Install
         run: pnpm install
